TEST_PROGRAMS/INVALID/09/blank_funcsign.go
package blank_funcsig

func doSomething(a, b int, c float, d bool) _ {
        return 1
}
